--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,17 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx8G
+org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.4
-yarn_mappings=1.20.4+build.3
-loader_version=0.15.3
+minecraft_version=1.21.4
+yarn_mappings=1.21.4+build.8
+loader_version=0.16.10
 
 # Mod Properties
 mod_version=1.0.0
-maven_group=net.whgkswo
+maven_group=org.whgkswo.tesm
 archives_base_name=tesm
 
 # Dependencies
-fabric_version=0.92.0+1.20.4
+fabric_version=0.118.0+1.21.4
