--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,8 @@ replay_*.log
 *.jfr
 
 # Resources
-src/main/resources
+src/main/resources/assets
+src/main/resources/data
 
 # Test Class
 src/main/java/net/whgkswo/tesm/TestClass.java
