1. gui라이브러리 제작중

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,12 @@ repositories {
 		name = "CottonMC"
 		url = "https://server.bbkr.space/artifactory/libs-release"
 	}
+
+	// Modern UI
+	maven {
+		name 'IzzelAliz Maven'
+		url 'https://maven.izzel.io/releases/'
+	}
 }
 
 loom {
@@ -60,6 +66,10 @@ dependencies {
 	dependencies {
 		modImplementation include("io.github.cottonmc:LibGui:12.0.1+1.21.2")
 	}
+
+	// Lombok
+	compileOnly 'org.projectlombok:lombok:1.18.30'
+	annotationProcessor 'org.projectlombok:lombok:1.18.30'
 }
 
 processResources {
